Updated styles and layout from VSCode

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Website</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trial Website</title>
+    <link rel="stylesheet" href="2style/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is my first website.</p>
-    <script src="js/script.js"></script>
+    <div class="container">
+        <h1>Welcome to My Website</h1>
+        <p>This is a modern, clean layout with improved styling.</p>
+        <button onclick="alert('You clicked!')">Click Me</button>
+    </div>
+    <script src="3JS/script.js"></script>
 </body>
 </html>
+
