--- a/index.html
+++ b/index.html
@@ -1,19 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trial Website</title>
-    <link rel="stylesheet" href="2style/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="style/style.css" />
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to My Website</h1>
-        <p>This is a modern, clean layout with improved styling.</p>
-        <button onclick="alert('You clicked!')">Click Me</button>
-    </div>
-    <script src="3JS/script.js"></script>
+  <div class="container">
+    <header>
+      <img src="https://via.placeholder.com/150" alt="Profile Photo" class="profile-img" />
+      <h1>Marco Romero</h1>
+      <p>Aspiring Web Developer | Machine Learning Enthusiast</p>
+    </header>
+
+    <section class="about">
+      <h2>About Me</h2>
+      <p>I am a student passionate about building interactive websites and integrating intelligent systems. I love solving problems with code and learning new technologies.</p>
+    </section>
+
+    <section class="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>HTML & CSS</li>
+        <li>JavaScript</li>
+        <li>Python & Flask</li>
+        <li>Machine Learning (scikit-learn, pandas)</li>
+        <li>Git & GitHub</li>
+      </ul>
+    </section>
+
+    <section class="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li><a href="#">PCOS Classification with AI (Thesis)</a></li>
+        <li><a href="#">Interactive Website Demo</a></li>
+        <li><a href="#">Python Chatbot</a></li>
+      </ul>
+    </section>
+
+    <section class="contact">
+      <h2>Contact</h2>
+      <p>Email me at: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+    </section>
+  </div>
 </body>
 </html>
 
