Styled profile portfolio with layout and color improvements

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Portfolio</title>
+  <title>Marco Romero | Portfolio</title>
   <link rel="stylesheet" href="style/style.css" />
 </head>
 <body>
@@ -11,39 +11,44 @@
     <header>
       <img src="https://via.placeholder.com/150" alt="Profile Photo" class="profile-img" />
       <h1>Marco Romero</h1>
-      <p>Aspiring Web Developer | Machine Learning Enthusiast</p>
+      <p class="subtitle">Aspiring Web Developer & Machine Learning Enthusiast</p>
     </header>
 
-    <section class="about">
-      <h2>About Me</h2>
-      <p>I am a student passionate about building interactive websites and integrating intelligent systems. I love solving problems with code and learning new technologies.</p>
-    </section>
+    <main>
+      <section class="card">
+        <h2>About Me</h2>
+        <p>I’m a student passionate about building interactive web experiences and applying AI to solve real-world problems. I enjoy combining creative design with technical problem-solving.</p>
+      </section>
 
-    <section class="skills">
-      <h2>Skills</h2>
-      <ul>
-        <li>HTML & CSS</li>
-        <li>JavaScript</li>
-        <li>Python & Flask</li>
-        <li>Machine Learning (scikit-learn, pandas)</li>
-        <li>Git & GitHub</li>
-      </ul>
-    </section>
+      <section class="card">
+        <h2>Skills</h2>
+        <ul class="skills-list">
+          <li>HTML & CSS</li>
+          <li>JavaScript (Vanilla & DOM)</li>
+          <li>Python (Flask, Pandas, scikit-learn)</li>
+          <li>Machine Learning</li>
+          <li>Git & GitHub</li>
+        </ul>
+      </section>
 
-    <section class="projects">
-      <h2>Projects</h2>
-      <ul>
-        <li><a href="#">PCOS Classification with AI (Thesis)</a></li>
-        <li><a href="#">Interactive Website Demo</a></li>
-        <li><a href="#">Python Chatbot</a></li>
-      </ul>
-    </section>
+      <section class="card">
+        <h2>Projects</h2>
+        <ul>
+          <li><a href="#">🎓 PCOS Classification with AI (Thesis)</a></li>
+          <li><a href="#">🌐 Interactive Portfolio Website</a></li>
+          <li><a href="#">🤖 Python Chatbot with Flask</a></li>
+        </ul>
+      </section>
 
-    <section class="contact">
-      <h2>Contact</h2>
-      <p>Email me at: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-    </section>
+      <section class="card contact">
+        <h2>Contact</h2>
+        <p>📧 <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+      </section>
+    </main>
+
+    <footer>
+      <p>© 2025 Marco Romero. All rights reserved.</p>
+    </footer>
   </div>
 </body>
 </html>
-
