--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Myfolio | Marco Romero</title>
-  <link rel="stylesheet" href="style/style.css" />
+  <link rel="stylesheet" href="2style/style.css" />
 </head>
 <body>
   <nav class="navbar">
