Update portfolio with About section, CSS color format, and add elements

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
     
     button {
-      background: transparent;
+      background: #b94b35;
       color: #fff; 
       border: none;
       cursor: pointer;
@@ -45,6 +45,15 @@
     .progress-bar {
       background-color: #b94b35;
     }
+
+    .section-divider {
+      border: none;
+      height: 2px;
+      background-color: #fff; 
+      width: 60px; 
+      margin: 10px 0;
+    }
+
   </style>
 </head>
 <body>
@@ -97,12 +106,11 @@
         Hi There, <br>
         I'm <span style="color: #b94b35;">Marco R. Sunga</span>
       </h1>
+      <hr class="section-divider">
       <p style="font-size: 1.5rem; margin-bottom: 20px;">
         A <span style="color: #b94b35;">Data Scientist and Data Analyst</span>
       </p>
-      <a href="#about" style="display: inline-block; padding: 12px 24px; background: #e9e7e7ff; color: white; border-radius: 25px; font-weight: bold;">
-        About Me ↓
-      </a>
+      
     </div>
     <div class="hero-image">
       <img src="https://via.placeholder.com/300x400" alt="Profile Photo" style="border-radius: 15px;" />
