Update portfolio with About section, skills styling, and contact popup

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
     
     button {
-      background: #b94b35;
+      background: transparent;
       color: #fff; 
       border: none;
       cursor: pointer;
@@ -50,7 +50,7 @@
       border: none;
       height: 2px;
       background-color: #fff; 
-      width: 60px; 
+      width: 100px; 
       margin: 10px 0;
     }
 
@@ -131,8 +131,7 @@
         Bachelor’s Degree in Data Science<br>
         <em> August 2023 – August 2026</em>
       </li>
-
-
+      <hr class="section-divider">
       <li>
         <strong>Emilio Aguinaldo College - Cavite</strong><br>
         Senior High School: Humanities in Social Sciences<br>
