Update color palette and section divider

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       color: #fff;
     }
     .highlight, a, span[style*="color"], .btn-contact {
-  color: #b94b35 !important;
+  color: #c92a0aff !important;
     }
 
     .navbar, .hero, section, .services, .service-cards, .card, .contactModal {
@@ -39,19 +39,27 @@
     }
 
     button:hover {
-      color: #b94b35; 
+      color: #c92a0aff; 
     }
 
     .progress-bar {
-      background-color: #b94b35;
+      background-color: #c92a0aff;
     }
 
     .section-divider {
       border: none;
       height: 2px;
       background-color: #fff; 
-      width: 100px; 
-      margin: 10px 0;
+      width: 300px; 
+      margin: 20px 0;
+    }
+
+    .section1-divider {
+      border: none;
+      height: 4px;
+      background-color: #fff; 
+      width: 1000px; 
+      margin: 20px 0;
     }
 
   </style>
@@ -104,11 +112,11 @@
     <div class="hero-text" style="max-width: 600px;">
       <h1 style="font-size: 2.5rem; font-weight: bold; margin-bottom: 10px;">
         Hi There, <br>
-        I'm <span style="color: #b94b35;">Marco R. Sunga</span>
+        I'm <span style="color: #c92a0aff;">Marco R. Sunga</span>
       </h1>
       <hr class="section-divider">
       <p style="font-size: 1.5rem; margin-bottom: 20px;">
-        A <span style="color: #b94b35;">Data Scientist and Data Analyst</span>
+        A <span style="color: #c92a0aff;">Data Scientist and Data Analyst</span>
       </p>
       
     </div>
@@ -131,7 +139,9 @@
         Bachelor’s Degree in Data Science<br>
         <em> August 2023 – August 2026</em>
       </li>
+
       <hr class="section-divider">
+
       <li>
         <strong>Emilio Aguinaldo College - Cavite</strong><br>
         Senior High School: Humanities in Social Sciences<br>
@@ -139,47 +149,49 @@
       </li>
     </ul>
   </section>
-
+  
+  <hr class="section1-divider">
+  
   <!-- Skills Section -->
   <section id="skills" style="padding: 50px;">
-    <h2 style="color: #b94b35;">Skills</h2>
+    <h2 style="color: #c92a0aff;">Skills</h2>
     <div style="display: flex; gap: 40px; flex-wrap: wrap;">
 
       <!-- Technical Skills -->
       <div style="flex: 1; min-width: 250px;">
         <h3>Technical Skills</h3>
-        <p> Data Analysis and Engineering (using Jupyter Notebook) <span style="float:right; color: #b94b35;">90%</span></p>
+        <p> Data Analysis and Engineering (using Jupyter Notebook) <span style="float:right; color: #c92a0aff;">90%</span></p>
         <div style="background: #333; height: 6px; border-radius: 3px;">
-          <div style="width: 90%; height: 6px; background: #b94b35; border-radius: 3px;"></div>
+          <div style="width: 90%; height: 6px; background: #c92a0aff; border-radius: 3px;"></div>
         </div>
 
-        <p> Data Visualization (using Tableau and PowerBI) <span style="float:right; color: #b94b35;">80%</span></p>
+        <p> Data Visualization (using Tableau and PowerBI) <span style="float:right; color: #c92a0aff;">80%</span></p>
         <div style="background: #333; height: 6px; border-radius: 3px;">
-          <div style="width: 80%; height: 6px; background: #b94b35; border-radius: 3px;"></div>
+          <div style="width: 80%; height: 6px; background: #c92a0aff; border-radius: 3px;"></div>
         </div>
 
-        <p> Database Management System (MySQL and Oracle) <span style="float:right; color: #b94b35;">85%</span></p>
+        <p> Database Management System (MySQL and Oracle) <span style="float:right; color: #c92a0aff;">85%</span></p>
         <div style="background: #333; height: 6px; border-radius: 3px;">
-          <div style="width: 85%; height: 6px; background: #b94b35; border-radius: 3px;"></div>
+          <div style="width: 85%; height: 6px; background: #c92a0aff; border-radius: 3px;"></div>
         </div>
       </div>
 
       <!-- Programming Languages -->
       <div style="flex: 1; min-width: 250px;">
         <h3>Programming Languages</h3>
-        <p> Python <span style="float:right; color: #b94b35;">95%</span></p>
+        <p> Python <span style="float:right; color: #c92a0aff;">95%</span></p>
         <div style="background: #333; height: 6px; border-radius: 3px;">
-          <div style="width: 95%; height: 6px; background: #b94b35; border-radius: 3px;"></div>
+          <div style="width: 95%; height: 6px; background: #c92a0aff; border-radius: 3px;"></div>
         </div>
 
-        <p> HTML, CSS, and JavaScript <span style="float:right; color: #b94b35;">70%</span></p>
+        <p> HTML, CSS, and JavaScript <span style="float:right; color: #c92a0aff;">70%</span></p>
         <div style="background: #333; height: 6px; border-radius: 3px;">
-          <div style="width: 70%; height: 6px; background: #b94b35; border-radius: 3px;"></div>
+          <div style="width: 70%; height: 6px; background: #c92a0aff; border-radius: 3px;"></div>
         </div>
 
-        <p> C++ <span style="float:right; color: #b94b35;">80%</span></p>
+        <p> C++ <span style="float:right; color: #c92a0aff;">80%</span></p>
         <div style="background: #333; height: 6px; border-radius: 3px;">
-          <div style="width: 80%; height: 6px; background: #b94b35; border-radius: 3px;"></div>
+          <div style="width: 80%; height: 6px; background: #c92a0aff; border-radius: 3px;"></div>
         </div>
       </div>
 
@@ -187,23 +199,25 @@
       <div style="flex: 1; min-width: 250px;">
         <h3>Soft Skills</h3>
     
-        <p> Communication Skill <span style="float:right; color: #b94b35;">95%</span></p>
+        <p> Communication Skill <span style="float:right; color: #c92a0aff;">95%</span></p>
         <div style="background: #333; height: 6px; border-radius: 3px;">
-          <div style="width: 95%; height: 6px; background: #b94b35; border-radius: 3px;"></div>
+          <div style="width: 95%; height: 6px; background: #c92a0aff; border-radius: 3px;"></div>
         </div>
 
-        <p> Leadership <span style="float:right; color: #b94b35;">80%</span></p>
+        <p> Leadership <span style="float:right; color: #c92a0aff;">80%</span></p>
         <div style="background: #333; height: 6px; border-radius: 3px;">
-          <div style="width: 80%; height: 6px; background: #b94b35; border-radius: 3px;"></div>
+          <div style="width: 80%; height: 6px; background: #c92a0aff; border-radius: 3px;"></div>
         </div>
 
-        <p> Collaboration Skill <span style="float:right; color: #b94b35;">90%</span></p>
+        <p> Collaboration Skill <span style="float:right; color: #c92a0aff;">90%</span></p>
         <div style="background: #333; height: 6px; border-radius: 3px;">
-          <div style="width: 90%; height: 6px; background: #b94b35; border-radius: 3px;"></div>
+          <div style="width: 90%; height: 6px; background: #c92a0aff; border-radius: 3px;"></div>
         </div>
       </div>
     </div>
   </section>
+  
+  <hr class="section1-divider">
 
   <!-- Projects Section -->
   <section class="services" id="projects">
